<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/list_item_height"
    android:minHeight="@dimen/list_item_height">

    <ImageView
        android:id="@+id/image"
        android:layout_width="@dimen/list_item_height"
        android:layout_height="@dimen/list_item_height"
        android:src="@mipmap/ic_launcher" />

    <RelativeLayout
        android:id="@+id/text_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/image"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/title_text_view"
            style="@style/title_style"
            android:paddingTop="16dp"
            tools:text="@string/sample_name" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_text_view"
            android:max="5"
            android:paddingTop="2dp"
            android:rating="4"
            android:stepSize="1" />

        <TextView
            android:id="@+id/price_text_view"
            style="@style/item_content_style"
            android:layout_below="@id/title_text_view"
            android:layout_toRightOf="@+id/rating_bar"
            android:paddingLeft="30dp"
            android:textColor="@color/feature_price_color"
            android:textSize="16sp"
            tools:text="@string/sample_price" />

        <TextView
            android:id="@+id/description_text_view"
            style="@style/item_content_style"
            android:layout_below="@id/price_text_view"
            android:paddingTop="2dp"
            tools:text="@string/sample_description" />

        <TextView
            android:id="@+id/address_text_view"
            style="@style/item_content_style"
            android:layout_below="@id/description_text_view"
            android:paddingTop="2dp"
            tools:text="@string/sample_address" />

        <TextView
            android:id="@+id/hours_text_view"
            style="@style/item_content_style"
            android:layout_below="@id/address_text_view"
            android:paddingBottom="16dp"
            android:paddingTop="2dp"
            tools:text="@string/sample_hours" />
    </RelativeLayout>
</RelativeLayout>